fixed height and white space issue for all pages

--- a/education/education.css
+++ b/education/education.css
@@ -156,7 +156,7 @@ footer a:hover {
         display: flex;
         flex-direction: column;
         width: 100%;
-        height: 100%;
+        min-height: 100vh;
     }
 
     #education-page {
