--- a/employment/employment.css
+++ b/employment/employment.css
@@ -155,7 +155,7 @@ footer a:hover {
         display: flex;
         flex-direction: column;
         width: 100%;
-        height: 100vh;
+        min-height: 100vh;
     }
 
     #employment-page {
