--- a/projects/projects.css
+++ b/projects/projects.css
@@ -198,7 +198,7 @@ footer a:hover {
         display: flex;
         flex-direction: column;
         width:100%;
-        height: 100vh;
+        min-height: 100vh;
     }
 
     #project-page {
